# HairSimu

./: CMakeLists.txt  README.md
analysis/: metrics.csv  report.md
analysis_latest/: metrics.csv  report.md
docs/: IMPLEMENTATION_PLAN.md  PROPOSAL_EMAIL.md  SHADING_ALGORITHMS.md  SHADING_COMPARISON_METRICS.md
include/: Experiment.h  HairModelLoader.h  HairSimulation.h  MathTypes.h  ShadingModels.h  Viewer.h
output_hair_view/: report.md  summary.txt
scripts/: analyze_shading.py
src/: Experiment.cpp  HairModelLoader.cpp  HairSimulation.cpp  ShadingModels.cpp  Viewer.cpp  main.cpp
